# vim-diffundo

./: .gitignore  README.md  pyproject.toml
autoload/: diffundo.vim
plugin/: diffundo.vim
pythonx/diffundo/: __init__.py  interface.py
tests/: test_pythonx.py
tests/diffundo/: test_interface.py
tests/diffundo/fixtures/: __init__.py  undotree.py
